feat #89 : 유저의 챌린지를 조회할 때, 과거 이력을 고려해 현재인 가장 최신 것을 갖고 오도록 수정